--- a/k8s/ingestor.yaml
+++ b/k8s/ingestor.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
         - name: ingestor
-          image: gcr.io/development-342711/ingestor:latest
+          image: asia-northeast1-docker.pkg.dev/development-342711/ingest:latest
           env:
             - name: PODNAME
               valueFrom:
