--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,7 +36,8 @@
 			"extensions": [
 				"GitHub.vscode-pull-request-github",
 				"golang.Go",
-				"ms-azuretools.vscode-docker"
+				"ms-azuretools.vscode-docker",
+				"ms-kubernetes-tools.vscode-kubernetes-tools"
 			]
 		}
 	},
