--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -42,6 +42,14 @@
 		}
 	},
 
+	"features": {
+		"kubectl-helm-minikube": {
+			"version": "latest",
+			"helm": "latest",
+			"minikube": "latest"
+		}
+	},
+
 	"remoteUser": "codespace",
 
 	"overrideCommand": false,
