--- a/k8s/transcriber.yaml
+++ b/k8s/transcriber.yaml
@@ -20,7 +20,7 @@ metadata:
     app: leader-election
 
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: leader-election
@@ -32,7 +32,7 @@ rules:
     verbs: ["*"]
 
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: leader-election
